# sklearn-datasets-ml-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  thunder-collection_sklearn_datasets_ml_api.json  thunder-environment_sklearn_datasets_ml_api_dev.json
app/: main.py
app/routers/: diabetes.py  iris.py
docker/0.1.0/alpine/: Dockerfile  log.txt
docker/0.1.0/python/: Dockerfile
mltracking/: diabetes_lr.py  iris_dt.py
tests/: test_sklearn_datasets_ml_api.py
