[tool.poetry]
name = "sklearn-datasets-ml-api"
version = "0.1.0"
description = ""
authors = ["Dendi Handian <contact.dendi@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mlflow = "^1.23.1"
sklearn = "^0.0"
pandas = "^1.4.0"
utils = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
